fixed p alignment
fixed p alignment

--- a/project1/mystyle.css
+++ b/project1/mystyle.css
@@ -12,10 +12,6 @@ p {
     Letter-Spacing: 0.05em;
     line-height: 130%;
     display: inherit;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-right: 150px;
-    margin-left: 50px;
 }   
     
 
